--- a/dashboard.html
+++ b/dashboard.html
@@ -374,7 +374,7 @@
                     region: store.Region || 'N/A',
                     model: store.StoreModel || 'N/A',
                     quality: 100,
-                    country: 'us' // Will be enhanced with real country data
+                    country: store.Country === 'Canada' ? 'canada' : 'us'
                 }));
 
                 filteredData = [...allStoreData];
@@ -430,7 +430,11 @@
                 let matchType = typeFilter === 'all' ||
                     (typeFilter === 'stores' && (item.type === 'HomeStore' || item.type === 'Outlet' || item.type === 'eCommerce')) ||
                     (typeFilter === 'warehouses' && item.type === 'Warehouse');
-                let matchStatus = statusFilter === 'all' || item.status.toLowerCase() === statusFilter.toLowerCase();
+
+                // Handle status filtering - "Active" matches "Active - New", "Active - %", etc.
+                let matchStatus = statusFilter === 'all' ||
+                    (statusFilter === 'active' && item.status.toLowerCase().startsWith('active')) ||
+                    (statusFilter === 'inactive' && item.status.toLowerCase().startsWith('inactive'));
 
                 return matchRegion && matchType && matchStatus;
             });
@@ -463,23 +467,15 @@
 
         // Update KPI cards
         function updateKPIs(data) {
-            if (dashboardData && dashboardData.kpis) {
-                // Use real KPI data from database
-                const kpis = dashboardData.kpis;
-                document.querySelector('.kpi-card:nth-child(1) .kpi-value').textContent = kpis.total_active_stores || 0;
-                document.querySelector('.kpi-card:nth-child(2) .kpi-value').textContent = kpis.total_active_warehouses || 0;
-                document.querySelector('.kpi-card:nth-child(4) .kpi-value').textContent = kpis.total_locations || 0;
-            } else {
-                // Fallback to calculated values
-                const stores = data.filter(d => d.type !== 'Warehouse');
-                const warehouses = data.filter(d => d.type === 'Warehouse');
-                const activeStores = stores.filter(d => d.status === 'Active');
-                const activeWarehouses = warehouses.filter(d => d.status === 'Active');
+            // Always calculate from filtered data
+            const stores = data.filter(d => d.type !== 'Warehouse');
+            const warehouses = data.filter(d => d.type === 'Warehouse');
+            const activeStores = stores.filter(d => d.status === 'Active');
+            const activeWarehouses = warehouses.filter(d => d.status === 'Active');
 
-                document.querySelector('.kpi-card:nth-child(1) .kpi-value').textContent = activeStores.length;
-                document.querySelector('.kpi-card:nth-child(2) .kpi-value').textContent = activeWarehouses.length;
-                document.querySelector('.kpi-card:nth-child(4) .kpi-value').textContent = data.length;
-            }
+            document.querySelector('.kpi-card:nth-child(1) .kpi-value').textContent = activeStores.length;
+            document.querySelector('.kpi-card:nth-child(2) .kpi-value').textContent = activeWarehouses.length;
+            document.querySelector('.kpi-card:nth-child(4) .kpi-value').textContent = data.length;
         }
 
         // Create charts with initial data
